--- a/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
@@ -35,7 +35,8 @@ import {
   TabbedSection,
   Tag,
   TagDescription,
-  TagTitle
+  TagTitle,
+  TryItNow
 } from "@speakeasy-api/docs-md-react";
 
 <Tag slot="tag">
@@ -98,10 +99,9 @@ TypeScript
   id="operation-fim_completion_v1_fim_completions_post_code-samples_typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Mistral } from "@mistralai/mistralai";
+<TryItNow
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -118,10 +118,8 @@ async function run() {
   console.log(result);
 }
 
-run();
-```
-
-</CodeSample>
+run();`}
+/>
 
 </SectionContent>
 
@@ -1489,10 +1487,9 @@ TypeScript
 
 <SectionContent slot="content" id="operation-stream_fim_code-samples_typescript">
 
-<CodeSample>
-
-```typescript
-import { Mistral } from "@mistralai/mistralai";
+<TryItNow
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -1511,10 +1508,8 @@ async function run() {
   }
 }
 
-run();
-```
-
-</CodeSample>
+run();`}
+/>
 
 </SectionContent>
 
