--- a/examples/nextra/mistral/src/app/api/endpoint/fine-tuning/jobs/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/fine-tuning/jobs/page.mdx
@@ -35,7 +35,8 @@ import {
   SectionTitle,
   TabbedSection,
   Tag,
-  TagTitle
+  TagTitle,
+  TryItNow
 } from "@speakeasy-api/docs-md-react";
 
 <Tag slot="tag">
@@ -92,10 +93,9 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_code-samples_typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Mistral } from "@mistralai/mistralai";
+<TryItNow
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -108,10 +108,8 @@ async function run() {
   console.log(result);
 }
 
-run();
-```
-
-</CodeSample>
+run();`}
+/>
 
 </SectionContent>
 
@@ -2095,10 +2093,9 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_code-samples_typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Mistral } from "@mistralai/mistralai";
+<TryItNow
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -2116,10 +2113,8 @@ async function run() {
   console.log(result);
 }
 
-run();
-```
-
-</CodeSample>
+run();`}
+/>
 
 </SectionContent>
 
@@ -5438,10 +5433,9 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job_code-samples_typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Mistral } from "@mistralai/mistralai";
+<TryItNow
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -5456,10 +5450,8 @@ async function run() {
   console.log(result);
 }
 
-run();
-```
-
-</CodeSample>
+run();`}
+/>
 
 </SectionContent>
 
@@ -8101,10 +8093,9 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job_code-samples_typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Mistral } from "@mistralai/mistralai";
+<TryItNow
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -8119,10 +8110,8 @@ async function run() {
   console.log(result);
 }
 
-run();
-```
-
-</CodeSample>
+run();`}
+/>
 
 </SectionContent>
 
@@ -10764,10 +10753,9 @@ TypeScript
   id="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job_code-samples_typescript"
 >
 
-<CodeSample>
-
-```typescript
-import { Mistral } from "@mistralai/mistralai";
+<TryItNow
+  externalDependencies={{"zod":"^3.25.64","@mistralai/mistralai":"latest"}}
+  defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
   apiKey: "<YOUR_BEARER_TOKEN_HERE>",
@@ -10782,10 +10770,8 @@ async function run() {
   console.log(result);
 }
 
-run();
-```
-
-</CodeSample>
+run();`}
+/>
 
 </SectionContent>
 
