--- a/examples/custom/mistral/src/app/api/page.mdx
+++ b/examples/custom/mistral/src/app/api/page.mdx
@@ -33,7 +33,7 @@ import {
   TryItNow
 } from "@/components/speakeasy-custom";
 
-# About Mistral AI API
+# Mistral AI API
 
 _Version: 1.0.0_
 
@@ -43,11 +43,9 @@ Servers
 
 - https://api.mistral.ai
 
-# Global Security
+## Global Security
 
 ### ApiKey <Pill variant="info">bearer</Pill> <Pill variant="info">http</Pill> \{#ApiKey\}
-
-# Endpoints
 
 <Operation>
 
