--- a/examples/docusaurus/glean/docs/api/index.mdx
+++ b/examples/docusaurus/glean/docs/api/index.mdx
@@ -35,6 +35,6 @@ Servers
 
 - https://\{instance\}-be.glean.com
 
-# Global Security
+## Global Security
 
 ### APIToken <Pill variant="info">bearer</Pill> <Pill variant="info">http</Pill> \{#APIToken\}
