--- a/examples/nextra/pokeapi/src/app/api/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/page.mdx
@@ -33,6 +33,6 @@ Servers
 
 - https://pokeapi.co
 
-# Global Security
+## Global Security
 
 ### cookieAuth <Pill variant="info">cookie</Pill> <Pill variant="info">apiKey</Pill> [#cookieAuth]
