--- a/examples/custom/pokeapi/src/app/api/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/page.mdx
@@ -28,6 +28,6 @@ Servers
 
 - https://pokeapi.co
 
-# Global Security
+## Global Security
 
 ### cookieAuth <Pill variant="info">cookie</Pill> <Pill variant="info">apiKey</Pill> \{#cookieAuth\}
