--- a/examples/docusaurus/mistral/docs/api/index.mdx
+++ b/examples/docusaurus/mistral/docs/api/index.mdx
@@ -20,7 +20,7 @@ Servers
 
 - https://api.mistral.ai
 
-# Global Security
+## Global Security
 
 ### ApiKey <Pill variant="info">bearer</Pill> <Pill variant="info">http</Pill> \{#ApiKey\}
 
