--- a/examples/docusaurus/pokeapi/docs/api/index.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/index.mdx
@@ -34,6 +34,6 @@ Servers
 
 - https://pokeapi.co
 
-# Global Security
+## Global Security
 
 ### cookieAuth <Pill variant="info">cookie</Pill> <Pill variant="info">apiKey</Pill> \{#cookieAuth\}
