--- a/examples/nextra/mistral/src/app/api/page.mdx
+++ b/examples/nextra/mistral/src/app/api/page.mdx
@@ -18,6 +18,6 @@ Servers
 
 - https://api.mistral.ai
 
-# Global Security
+## Global Security
 
 ### ApiKey <Pill variant="info">bearer</Pill> <Pill variant="info">http</Pill> [#ApiKey]
